src/test/deca/context/valid/paramVerify.deca
class A {
    int x;
    void method(int x, int x){

    }
}