src/test/deca/context/invalid/classAsVariable.deca
class A {
    int x = 0 ;
    //void setX(int x) {
     //   this.x = x ;
   // }
 //   int getX() {
   //     return x ;
    //}
    void init() {
        x = 0 ;
    }
}

{
    A a = new A();
    a.x = 1;
    A.x = 1;
}